--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,87 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+* {
+  box-sizing: border-box;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+body {
+  overflow-y: scroll;
 }
+
+/*Nav Search Bar*/
+
+.search-bar {
+  position: absolute;
+  top: 5px;
+  right: 10px;
+}
+
+/* Container For Cards */
+
+.card-container {
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+  justify-content: center;
+  min-height: 100vh;
+  width: 100%;
+  overflow-y: scroll;
+}
+
+
+/*Card Styles */
+
+.recipe-card {
+  height: 450px;
+  width: 350px;
+  padding-bottom: 15px;
+  border: 2px solid #000;
+  border-radius: 4px;
+  position: relative;
+  display: flex;
+  flex-direction: column;
+}
+
+.recipe-card img {
+  height: 180px;
+  border-radius: 4px;
+}
+
+.site-link {
+  position: absolute;
+  bottom: 15px;
+  left: 15px;
+}
+
+/* Modal Styles */
+
+.modal-bg {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: rgba(0, 0, 0, 0.5);
+  z-index: 10;
+}
+
+.modal-content {
+  width: 400px;
+  height: 500px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin: auto;
+  background-color: #FFF;
+  opacity: 1;
+  z-index: 100;
+  overflow-y: scroll;
+}
+
+
+.close-modal:hover {
+  cursor: pointer;
+  opacity: 0.7;
+}
+
